fix(TabHeader): fix hover flicker. (#142)
* fix(TabHeader): fix hover flicker.

* fix(TabHeader): disabled btn's transition.

--- a/packages/ui-components/src/Tabs/styles.scss
+++ b/packages/ui-components/src/Tabs/styles.scss
@@ -233,3 +233,7 @@
 button, .btn, .nav-link {
   cursor: pointer !important;
 }
+
+.btn {
+  transition: none !important;
+}
